# yast-cim

./: MAINTAINER  RPMNAME  configure.in.in  yast2-cim.spec.in
package/: yast2-cim.changes
src/: .cvsignore  CIMFunctions.cc  CIMFunctions.h  Makefile.am  Y2CCCIM.cc  Y2CCCIM.h  Y2CIMComponent.cc  Y2CIMComponent.h
testsuite/devel/: cim-browser.ycp  file-browser.ycp
